Memory Game Design Update

--- a/1-MemoryGame/index.html
+++ b/1-MemoryGame/index.html
@@ -18,19 +18,21 @@
     />
   </head>
   <body>
-    <div class="full-container">
+    <section class="section-center">
       <div class="container">
-        <!-- ? score -->
-        <div class="score-board">
-          <h3>Score: <span id="result">0</span></h3>
+        <h2>Memory Game</h2>
+
+        <!-- score -->
+        <h3>Score: <span id="result">0</span></h3>
+      </div>
+
+      <div class="game-container">
+        <!-- game grid area -->
+        <div class="grid">
+          <!-- here ... append child dynamically -->
         </div>
       </div>
-    </div>
-
-    <!-- ? grid area -->
-    <div class="grid">
-      <!-- here ... append child dynamically -->
-    </div>
+    </section>
 
     <!-- javascript -->
     <script src="./assets/js/app.js"></script>
