--- a/2-WhackAMole/index.html
+++ b/2-WhackAMole/index.html
@@ -16,22 +16,30 @@
     />
   </head>
   <body>
-    <h1>Whack A Mole</h1>
+    <section class="section-center">
+      <div class="container">
+        <h2>Whack A Mole</h2>
 
-    <h2>Your Score: <span id="score">0</span></h2>
-    <h2>Seconds Left: <span id="time-left">60</span></h2>
+        <!-- score -->
+        <h3>Your Score: <span id="score">0</span></h3>
+        <h3>Seconds Left: <span id="time-left">60</span></h3>
+      </div>
 
-    <div class="grid">
-      <div class="square" id="1"></div>
-      <div class="square mole" id="2"></div>
-      <div class="square" id="3"></div>
-      <div class="square" id="4"></div>
-      <div class="square" id="5"></div>
-      <div class="square" id="6"></div>
-      <div class="square" id="7"></div>
-      <div class="square" id="8"></div>
-      <div class="square" id="9"></div>
-    </div>
+      <div class="game-container">
+        <!-- game grid area -->
+        <div class="grid">
+          <div class="square" id="1"></div>
+          <div class="square mole" id="2"></div>
+          <div class="square" id="3"></div>
+          <div class="square" id="4"></div>
+          <div class="square" id="5"></div>
+          <div class="square" id="6"></div>
+          <div class="square" id="7"></div>
+          <div class="square" id="8"></div>
+          <div class="square" id="9"></div>
+        </div>
+      </div>
+    </section>
 
     <!-- javascript / script -->
     <script src="./assets/js/app.js"></script>
