fogger game design update

--- a/6-FoggerGame/index.html
+++ b/6-FoggerGame/index.html
@@ -16,107 +16,122 @@
     />
   </head>
   <body>
-    <button id="button">Start / Pause</button>
-    <h3>Seconds Left: <span id="time-left">20</span></h3>
-    <h3 id="result"></h3>
+    <section class="section-center">
+      <div class="container">
+        <!-- game title -->
+        <h2>Fogger Game</h2>
 
-    <div class="grid">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div class="ending-block"></div>
+        <!-- game play/pause button -->
+        <button id="button" class="btn">Start / Pause</button>
 
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+        <!-- game time countdown -->
+        <h3>Seconds Left: <span id="time-left">20</span></h3>
 
-      <div class="log-left l1"></div>
-      <div class="log-left l2"></div>
-      <div class="log-left l3"></div>
-      <div class="log-left l4"></div>
-      <div class="log-left l5"></div>
+        <!-- game result -->
+        <h3 id="result"></h3>
+      </div>
 
-      <div class="log-left l1"></div>
-      <div class="log-left l2"></div>
-      <div class="log-left l3"></div>
-      <div class="log-left l4"></div>
-      <div class="log-left l5"></div>
+      <div class="game-container">
+        <!-- game grid area -->
+        <div class="grid">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="ending-block"></div>
 
-      <div class="log-left l1"></div>
-      <div class="log-left l2"></div>
-      <div class="log-left l3"></div>
-      <div class="log-left l4"></div>
-      <div class="log-left l5"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
 
-      <div class="log-left l1"></div>
-      <div class="log-left l2"></div>
-      <div class="log-left l3"></div>
+          <div class="log-left l1"></div>
+          <div class="log-left l2"></div>
+          <div class="log-left l3"></div>
+          <div class="log-left l4"></div>
+          <div class="log-left l5"></div>
 
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+          <div class="log-left l1"></div>
+          <div class="log-left l2"></div>
+          <div class="log-left l3"></div>
+          <div class="log-left l4"></div>
+          <div class="log-left l5"></div>
 
-      <div class="car-right c1"></div>
-      <div class="car-right c2"></div>
-      <div class="car-right c3"></div>
+          <div class="log-left l1"></div>
+          <div class="log-left l2"></div>
+          <div class="log-left l3"></div>
+          <div class="log-left l4"></div>
+          <div class="log-left l5"></div>
 
-      <div class="car-right c1"></div>
-      <div class="car-right c2"></div>
-      <div class="car-right c3"></div>
+          <div class="log-left l1"></div>
+          <div class="log-left l2"></div>
+          <div class="log-left l3"></div>
 
-      <div class="car-right c1"></div>
-      <div class="car-right c2"></div>
-      <div class="car-right c3"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
 
-      <div class="car-left c1"></div>
-      <div class="car-left c2"></div>
-      <div class="car-left c3"></div>
+          <div class="car-right c1"></div>
+          <div class="car-right c2"></div>
+          <div class="car-right c3"></div>
 
-      <div class="car-left c1"></div>
-      <div class="car-left c2"></div>
-      <div class="car-left c3"></div>
+          <div class="car-right c1"></div>
+          <div class="car-right c2"></div>
+          <div class="car-right c3"></div>
 
-      <div class="car-left c1"></div>
-      <div class="car-left c2"></div>
-      <div class="car-left c3"></div>
+          <div class="car-right c1"></div>
+          <div class="car-right c2"></div>
+          <div class="car-right c3"></div>
 
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+          <div class="car-left c1"></div>
+          <div class="car-left c2"></div>
+          <div class="car-left c3"></div>
 
-      <div class="starting-block"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+          <div class="car-left c1"></div>
+          <div class="car-left c2"></div>
+          <div class="car-left c3"></div>
+
+          <div class="car-left c1"></div>
+          <div class="car-left c2"></div>
+          <div class="car-left c3"></div>
+
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+
+          <div class="starting-block"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </section>
 
     <!-- js / script -->
     <script src="./assets/js/app.js"></script>
